--- a/app/static/index.html
+++ b/app/static/index.html
@@ -9,7 +9,8 @@
 </head>
 <body class="bg-gray-100">
     <div class="container mx-auto px-4 py-8 max-w-4xl">
-        <div class="bg-white rounded-lg shadow-lg p-6">
+        <!-- Chat Section -->
+        <div class="bg-white rounded-lg shadow-lg p-6 mb-8">
             <h1 class="text-2xl font-bold mb-6 text-center text-gray-800">Ollama Chatbox</h1>
             
             <div class="mb-4">
@@ -29,6 +30,34 @@
                 <button id="sendButton" 
                         class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500">
                     Send
+                </button>
+            </div>
+        </div>
+
+        <!-- Research Section -->
+        <div class="bg-white rounded-lg shadow-lg p-6">
+            <h2 class="text-2xl font-bold mb-6 text-center text-gray-800">AI Research Assistant</h2>
+            
+            <div class="mb-4">
+                <select id="researchModelSelect" class="w-full p-2 border rounded-md">
+                    <option value="smollm2:135m">Smol LM 135M</option>
+                </select>
+            </div>
+
+            <div class="mb-4">
+                <input type="text" id="topicInput" 
+                       class="w-full p-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+                       placeholder="Enter your research topic...">
+            </div>
+
+            <div id="researchContainer" class="h-[500px] overflow-y-auto mb-4 p-4 border rounded-md">
+                <!-- Research results will be inserted here -->
+            </div>
+
+            <div class="flex justify-center">
+                <button id="researchButton" 
+                        class="bg-green-500 text-white px-6 py-2 rounded-md hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-green-500">
+                    Start Research
                 </button>
             </div>
         </div>
